--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-   Hello World
+   <a href="./exercise1/cookie-recipe/index.html"> Hello World</a>
 </body>
 </html>
