--- a/exercise2/lina-bo-bardi/index.html
+++ b/exercise2/lina-bo-bardi/index.html
@@ -7,6 +7,7 @@
     <title>Lina Bo Bardi Essay</title>
 </head>
 <body>
+    <p><a href="../../index.html">Back to Home Page</a></p>
     <h1>HOUSES OR MUSEUMS?</h1>
 <h3> Lina Bo Bardi, 1958</h3>
 
