--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-   <a href="./exercise1/cookie-recipe/index.html"> Hello World</a>
+    <div> class="bio"
+    <h2>Burcu Yasemin Turkay</h2>
+    <img src="assets/me.jpg" alt=""></div>
+    <p>My name is Burcu. I'm an M.Arch candidate at GSAPP. I'm also an exhibition designer, working at the intersection of art and architecture. Apparently, I'm a coder now!!!</p>
+    <h3>Exercises</h3>
+    <ul>
+        <li><a href="exercise1/cookie-recipe/index.html">Exercise 01</a></li>
+        <li><a href="exercise2/lina-bo-bardi/index.html">Exercise 02</a></li>
+    </ul>
 </body>
 </html>
