--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/main.css">
+    <!--Google Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Noto+Sans+Syloti+Nagri&display=swap" rel="stylesheet">
+    <!--stylesheet--> 
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div> class="bio"
+    <div> 
     <h2>Burcu Yasemin Turkay</h2>
     <img src="assets/me.jpg" alt=""></div>
     <p>My name is Burcu. I'm an M.Arch candidate at GSAPP. I'm also an exhibition designer, working at the intersection of art and architecture. Apparently, I'm a coder now!!!</p>
