--- a/exercise2/lina-bo-bardi/index.html
+++ b/exercise2/lina-bo-bardi/index.html
@@ -12,11 +12,22 @@
     <!--stylesheet--> 
     <link rel="stylesheet" href="styles.css">
 </head>
+
+<nav>
+    <ul>
+      <li><a href="../../index.html">Home</a></li>
+      <li><a href="#">Lina Bo Bardi Essay</a></li>
+      <li><a href="#">Articles</a></li>
+    </ul>
+  </nav>
+
 <body>
-    <div class="container">
-    <p><a href="../../index.html">Back to Home Page</a></p>
+    <div class="flex-container">
+        <div class="column left">
+          <header>
     <h1>HOUSES OR MUSEUMS?</h1>
 <h3> Lina Bo Bardi, 1958</h3>
+</header>
 
 <p class="pullquote">What should come first, houses or museums?</p>
     
@@ -34,7 +45,9 @@
 
 <p class="pullquote"> A museum that ought to have its own didactic voice in order to become a ‘true’ museum, which is ‘alive’, and not a ‘museum’ in the most obsolete use of the term.</p>
 
-<p>First published in Diário de Notícias (Salvador, Bahia), 5 October 1958</p>
+<p>First published in Diário de Notícias (Salvador, Bahia), 5 October 1958</p></div>
+
+        <div class="column right">
 
 <h1><em>CASAS OU MUSEUS?</em></h1>
 <h3>Lina Bo Bardi, 1958</h3>
@@ -53,7 +66,7 @@ essas bases, para não cair em um museu petrificado, isto é, inteiramente inút
 
 <p>Tais considerações são da maior importância, estando a Bahia no ponto de criar, na iminência de realizar, o que poderá ser um dia, ela beleza e fascinação poética do edifício que o abrigará, pela importância das obras a serem nele expostas, o museu mais importante do país: o Museu de Arte Sacra de Santa Teresa.</p>
 <p class="pullquote">Museu que deverá ter a sua impostação didática para ser um museu “verdadeiro”, vivo, e não um “museu” no sentido mais superado da palavra.</em></p>
-
+</div>
 </div>
 </body>
 </html>
