--- a/exercise2/lina-bo-bardi/index.html
+++ b/exercise2/lina-bo-bardi/index.html
@@ -28,7 +28,7 @@
     <h1>HOUSES OR MUSEUMS?</h1>
 <h3> Lina Bo Bardi, 1958</h3>
 </header>
-
+<main>
 <p class="pullquote">What should come first, houses or museums?</p>
     
 <p>Everything at once: the houses, the schools, the museums, the libraries. Urban Planning cannot ignore cultural issues. If in the construction of new neighbourhoods, new housing forms the basis of the city plan (and by housing we also mean the market, the schools and the public services like the hospital and the post offices), the planning of a city cannot overlook two key public buildings that still today are considered an intellectual luxury: the Museum and the Library.</p>
@@ -45,13 +45,14 @@
 
 <p class="pullquote"> A museum that ought to have its own didactic voice in order to become a ‘true’ museum, which is ‘alive’, and not a ‘museum’ in the most obsolete use of the term.</p>
 
-<p>First published in Diário de Notícias (Salvador, Bahia), 5 October 1958</p></div>
+<p>First published in Diário de Notícias (Salvador, Bahia), 5 October 1958</p></main></div>
 
         <div class="column right">
-
+<header>
 <h1><em>CASAS OU MUSEUS?</em></h1>
 <h3>Lina Bo Bardi, 1958</h3>
-
+</header>
+<main>
 <p class="pullquote"><em>Primeiro as Casas ou Museus?</p>
 
 <p>Tudo de uma só vez: as casas, as escolas, os museus, as bibliotecas. Uma planificação urbanística não pode prescindir dos problemas culturais se a construção de novos bairros, de novas casas, é a base do projeto de uma cidade (nas casas queremos incluir mercados, escolas, serviços coletivos, como saúde, correios, etc.) – o programa, ou melhor, a planificação de uma cidade não pode esquecer dois edifícios públicos, que ainda hoje são considerados um luxo intelectual: o museu e a biblioteca.</p>
@@ -66,7 +67,7 @@ essas bases, para não cair em um museu petrificado, isto é, inteiramente inút
 
 <p>Tais considerações são da maior importância, estando a Bahia no ponto de criar, na iminência de realizar, o que poderá ser um dia, ela beleza e fascinação poética do edifício que o abrigará, pela importância das obras a serem nele expostas, o museu mais importante do país: o Museu de Arte Sacra de Santa Teresa.</p>
 <p class="pullquote">Museu que deverá ter a sua impostação didática para ser um museu “verdadeiro”, vivo, e não um “museu” no sentido mais superado da palavra.</em></p>
-</div>
+</main></div>
 </div>
 </body>
 </html>
