--- a/midreview/index.html
+++ b/midreview/index.html
@@ -15,7 +15,7 @@
 
 <nav>
     <ul class="container">
-      <li><a href="/">Home</a></li>
+      <li><a href="/midreview/index.html">Home</a></li>
       <li><a href="#">Spatial Composition</a></li>
       <li><a href="#">Work</a></li>
     </ul>
