--- a/midreview/index.html
+++ b/midreview/index.html
@@ -8,15 +8,39 @@
     	<!--Google Font-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Noto+Sans+Syloti+Nagri&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Libre+Franklin:wght@400;500;700&family=Noto+Sans+Syloti+Nagri&display=swap" rel="stylesheet">
     <!--stylesheet--> 
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <nav>
-    <ul class="container">
+    <ul class="flex-container">
       <li><a href="/midreview/index.html">Home</a></li>
       <li><a href="#">Spatial Composition</a></li>
       <li><a href="#">Work</a></li>
     </ul>
   </nav>
+
+  <body>
+    <div class="container">
+
+        <header>
+          <div class="image">
+            <img src="assets/painting.jpg" alt="">
+          </div>
+        <h3>Spatial Composition</h3>
+        <br>
+        <h4>acrylic on paper</h4>
+        <h4>Burcu Yasemin Turkay, 2016</h4>
+        </div>
+
+        </header>
+
+            <div class="column center">            
+            
+            <p class="pullquote">Spatial Composition is the first acrylic painting completed by Burcu Yasemin Turkay. The work takes its inspiration from dazzle painting which was a technique extensively used during World War I as a camouflage strategy for ships. The patterns intend to make it difficult to estimate a ship’s heading and speed, thus misleading the enemy about a ship’s exact location. Likewise, the painting aims to create a space of confusion and disorientation, questioning the spatial qualities that guide people to perceive and understand space.</p> 
+            <br>
+              <p class="pullquote">The bright colors of each surface are referring to colors preferred by Piet Mondrian who had an enormous influence on the art and architecture of the twentieth century. His colors on two-dimensional canvas space were brought to life in a three-dimensional built space. These colors further play with vision and the understanding of depth, and hence how people construct the space around them in their minds.</p>
+    
+        </div>
+      </body>
