--- a/midreview/index.html
+++ b/midreview/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lina Bo Bardi Essay</title>
+    <title>Spatial Composition Painting</title>
     	<!--Google Font-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,20 +25,19 @@
     <div class="container">
 
         <header>
-          <div class="image">
-            <img src="assets/painting.jpg" alt="">
-          </div>
-        <h3>Spatial Composition</h3>
-        <br>
+            <img src="../assets/painting.jpg" alt="">
+            <h3>Spatial Composition</h3></div>
+            <div class="container-subtitle">
         <h4>acrylic on paper</h4>
-        <h4>Burcu Yasemin Turkay, 2016</h4>
+        <br>
+        <h4>2016</h4>
         </div>
 
         </header>
 
-            <div class="column center">            
+            <div class="column">            
             
-            <p class="pullquote">Spatial Composition is the first acrylic painting completed by Burcu Yasemin Turkay. The work takes its inspiration from dazzle painting which was a technique extensively used during World War I as a camouflage strategy for ships. The patterns intend to make it difficult to estimate a ship’s heading and speed, thus misleading the enemy about a ship’s exact location. Likewise, the painting aims to create a space of confusion and disorientation, questioning the spatial qualities that guide people to perceive and understand space.</p> 
+            <p class="pullquote"><strong>Spatial Composition</strong> is the first acrylic painting completed by <em>Burcu Yasemin Turkay</em>. The work takes its inspiration from dazzle painting which was a technique extensively used during World War I as a camouflage strategy for ships. The patterns intend to make it difficult to estimate a ship’s heading and speed, thus misleading the enemy about a ship’s exact location. Likewise, the painting aims to create a space of confusion and disorientation, questioning the spatial qualities that guide people to perceive and understand space.</p> 
             <br>
               <p class="pullquote">The bright colors of each surface are referring to colors preferred by Piet Mondrian who had an enormous influence on the art and architecture of the twentieth century. His colors on two-dimensional canvas space were brought to life in a three-dimensional built space. These colors further play with vision and the understanding of depth, and hence how people construct the space around them in their minds.</p>
     
