--- a/midreview/index.html
+++ b/midreview/index.html
@@ -1,45 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spatial Composition Painting</title>
-    	<!--Google Font-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Libre+Franklin:wght@400;500;700&family=Noto+Sans+Syloti+Nagri&display=swap" rel="stylesheet">
-    <!--stylesheet--> 
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Spatial Composition Painting</title>
+  <!--Google Font-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Libre+Franklin:wght@400;500;700&family=Noto+Sans+Syloti+Nagri&display=swap"
+    rel="stylesheet">
+  <!--stylesheet-->
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <nav>
-    <ul class="flex-container">
-      <li><a href="/midreview/index.html">Home</a></li>
-      <li><a href="#">Spatial Composition</a></li>
-      <li><a href="#">Work</a></li>
-    </ul>
-  </nav>
+  <ul class="flex-container">
+    <li><a href="/midreview/index.html">home</a></li>
+    <li><a href="#">spatial composition</a></li>
+    <li><a href="#">work</a></li>
+  </ul>
+</nav>
 
-  <body>
-    <div class="container">
+<body>
+  <div class="container">
 
-        <header>
-            <img src="../assets/painting.jpg" alt="">
-            <h3>Spatial Composition</h3></div>
-            <div class="container-subtitle">
-        <h4>acrylic on paper</h4>
-        <br>
-        <h4>2016</h4>
-        </div>
+    <header>
+      <img src="../assets/painting.jpg" alt="">
+      <h3>Spatial Composition</h3>
+      <p class="font">acrylic on paper</p>
+      <p class="font">2016</p>
+    <h4>Read More</h4>
+  </header>
+  </div>
 
-        </header>
 
-            <div class="column">            
-            
-            <p class="pullquote"><strong>Spatial Composition</strong> is the first acrylic painting completed by <em>Burcu Yasemin Turkay</em>. The work takes its inspiration from dazzle painting which was a technique extensively used during World War I as a camouflage strategy for ships. The patterns intend to make it difficult to estimate a ship’s heading and speed, thus misleading the enemy about a ship’s exact location. Likewise, the painting aims to create a space of confusion and disorientation, questioning the spatial qualities that guide people to perceive and understand space.</p> 
-            <br>
-              <p class="pullquote">The bright colors of each surface are referring to colors preferred by Piet Mondrian who had an enormous influence on the art and architecture of the twentieth century. His colors on two-dimensional canvas space were brought to life in a three-dimensional built space. These colors further play with vision and the understanding of depth, and hence how people construct the space around them in their minds.</p>
-    
-        </div>
-      </body>
+  
+
+  <div class="column">
+
+    <p class="pullquote"><strong>Spatial Composition</strong> is the first acrylic painting completed by <em>Burcu
+        Yasemin Turkay</em>. The work takes its inspiration from dazzle painting which was a technique extensively used
+      during World War I as a camouflage strategy for ships. The patterns intend to make it difficult to estimate a
+      ship’s heading and speed, thus misleading the enemy about a ship’s exact location. Likewise, the painting aims to
+      create a space of confusion and disorientation, questioning the spatial qualities that guide people to perceive
+      and understand space.</p>
+    <br>
+    <p class="pullquote">The bright colors of each surface are referring to colors preferred by Piet Mondrian who had an
+      enormous influence on the art and architecture of the twentieth century. His colors on two-dimensional canvas
+      space were brought to life in a three-dimensional built space. These colors further play with vision and the
+      understanding of depth, and hence how people construct the space around them in their minds.</p>
+
+  </div>
+</body>
