--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <ul>
         <li><a href="exercise1/cookie-recipe/index.html">Exercise 01</a></li>
         <li><a href="exercise2/lina-bo-bardi/index.html">Exercise 02</a></li>
-        <li><a href="/midreview/index.html">midreview</a></li>
+        <li><a href="/Project01/index.html">midreview</a></li>
     </ul>
 </body>
 </html>
