--- a/Project01/index.html
+++ b/Project01/index.html
@@ -18,7 +18,7 @@
 
 <nav>
   <ul class="flex-container">
-    <li><a href="/midreview/index.html">home</a></li>
+    <li><a href="../../index.html">home</a></li>
     <li><a href="#">spatial composition</a></li>
     <li><a href="#">work</a></li>
   </ul>
@@ -35,10 +35,7 @@
     <h4>Read More</h4>
   </header>
   </div>
-
-
   
-
   <div class="column">
 
     <p class="pullquote"><strong>Spatial Composition</strong> is the first acrylic painting completed by <em>Burcu
