--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <ul>
         <li><a href="exercise1/cookie-recipe/index.html">Exercise 01</a></li>
         <li><a href="exercise2/lina-bo-bardi/index.html">Exercise 02</a></li>
+        <li><a href="exercise3/index.html">Exercise 03</a></li>
         <li><a href="Project 01/index.html">Project 01</a></li>
     </ul>
 </body>
