--- a/Project 01/index.html
+++ b/Project 01/index.html
@@ -18,7 +18,7 @@
 
 <nav>
   <ul class="flex-container">
-    <li><a href="/Project 01/index.html">home</a></li>
+    <li><a href="../index.html">home</a></li>
     <li><a href="#">spatial composition</a></li>
     <li><a href="#">work</a></li>
   </ul>
