--- a/exercise3/index.html
+++ b/exercise3/index.html
@@ -11,7 +11,7 @@
     </head>
     <nav>
         <ul>
-          <li><a href="../../index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="#">Lina Bo Bardi Essay</a></li>
           <li><a href="#">Articles</a></li>
         </ul>
