--- a/exercise4/index.html
+++ b/exercise4/index.html
@@ -6,6 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <!--stylesheet--> 
    <link rel="stylesheet" href="styles.css">
+   <nav>
+    <ul>
+      <li><a href="../index.html">Home</a></li>
+    </ul>
+   </nav>
 <title>Houses or Museums? Flexbox</title>    
 <link rel="stylesheet" href="styles.css">
     </head>
