--- a/exercise6/index.html
+++ b/exercise6/index.html
@@ -15,7 +15,7 @@
 
 <nav>
     <ul class="container">
-      <li><a href="../../index.html">Home</a></li>
+      <li><a href="../index.html">Home</a></li>
       <li><a href="#">Lina Bo Bardi Essay</a></li>
       <li><a href="#">Articles</a></li>
     </ul>
