--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <li><a href="exercise1/cookie-recipe/index.html">Exercise 01</a></li>
         <li><a href="exercise2/lina-bo-bardi/index.html">Exercise 02</a></li>
         <li><a href="exercise3/index.html">Exercise 03</a></li>
+        <li><a href="exercise4/index.html">Exercise 04</a></li>
+        <li><a href="exercise6/index.html">Exercise 06</a></li>
         <li><a href="Project01/index.html">Project 01</a></li>
     </ul>
 </body>
