--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li><a href="exercise3/index.html">Exercise 03</a></li>
         <li><a href="exercise4/index.html">Exercise 04</a></li>
         <li><a href="exercise6/index.html">Exercise 06</a></li>
+        <li><a href="exercise7/index.html">Exercise 07</a></li>
         <li><a href="Project01/index.html">Project 01</a></li>
     </ul>
 </body>
