--- a/exercise7/index.html
+++ b/exercise7/index.html
@@ -21,3 +21,9 @@
     </script>
 </body>
 </html>
+
+<nav>
+    <ul class="container">
+      <li><a href="../index.html">Home</a></li>
+    </ul>
+  </nav>
