--- a/Project01-1/index.html
+++ b/Project01-1/index.html
@@ -35,15 +35,14 @@
         <p class="caption">2016</p>
     </div>
     <div class="secondrow">
-        <img class="image" src="../assets/geometries.jpg" alt="">
-        <img class="image" src="../assets/geometries2.jpg" alt="">
+        <img class="image3" src="../assets/geometries.jpg" alt="">
+        <img class="image4" src="../assets/geometries2.jpg" alt="">
         <p class="caption">acrylic on paper</p>
         <p class="caption">2016</p>
         <p class="caption">acrylic on paper</p>
         <p class="caption">2016</p>
     </div>
 
-    <h4>Read More</h4>
     </div>
 </body>
 
