--- a/Project01/index.html
+++ b/Project01/index.html
@@ -20,7 +20,7 @@
   <ul class="flex-container">
     <li><a href="../index.html">home</a></li>
     <li><a href="#">spatial composition</a></li>
-    <li><a href="#">work</a></li>
+    <li><a href="Project01-1/index.html">works</a></li>
   </ul>
 </nav>
 
@@ -30,8 +30,8 @@
     <header>
       <img src="../assets/painting.jpg" alt="">
       <h3>Spatial Composition</h3>
-      <p class="font">acrylic on paper</p>
-      <p class="font">2016</p>
+      <p class="caption">acrylic on paper</p>
+      <p class="caption">2016</p>
     <h4>Read More</h4>
   </header>
   </div>
