--- a/Project01-1/index.html
+++ b/Project01-1/index.html
@@ -27,7 +27,7 @@
     </header>
     <p class="title">works</title>
     <div class="firstrow">
-        <img class="image" src="../assets/painting.jpg" alt="">
+        <img class="image" src="../assets/painting.jpg" alt=""></a>
         <img class="image2" src="../assets/painting2.jpg" alt="">
         <p class="caption">acrylic on paper</p>
         <p class="caption">2016</p>
