--- a/Project01/index.html
+++ b/Project01/index.html
@@ -20,7 +20,7 @@
   <ul class="flex-container">
     <li><a href="../index.html">home</a></li>
     <li><a href="#">spatial composition</a></li>
-    <li><a href="Project01-1/index.html">works</a></li>
+    <li><a href="../Project01-1/index.html">works</a></li>
   </ul>
 </nav>
 
