--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li><a href="exercise6/index.html">Exercise 06</a></li>
         <li><a href="exercise7/index.html">Exercise 07</a></li>
         <li><a href="Project01/index.html">Project 01</a></li>
-        <li><a href="FinalProject/index.html">Project 01</a></li>
+        <li><a href="FinalProject/index.html">Final Project</a></li>
     </ul>
 </body>
 </html>
