--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -27,6 +27,16 @@
     </div>
   </div>
   <script src="main.js"></script>
+  <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+
+		<script type="importmap">
+		  {
+			"imports": {
+			  "three": "https://unpkg.com/three@<0.152.2>/build/three.module.js",
+			  "three/addons/": "https://unpkg.com/three@<0.152.2>/examples/jsm/"
+			}
+		  }
+		</script>
 </body>
 
 
