--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OBJECTS OF NYC</title>
   <link rel="stylesheet" href="style.css">
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+  <script nomodule="" src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
 </head>
 <body>
   <div class="container">
@@ -16,7 +18,6 @@
       <button class="filter-btn" data-filter="communication">Communication</button>
       <button class="filter-btn" data-filter="sanitation">Sanitation</button>
       <button class="filter-btn" data-filter="construction">Construction</button>
-      <button class="filter-btn" data-filter="transaction">Transaction</button>
       <button class="filter-btn" data-filter="consumption">Consumption</button>
       <button class="filter-btn active" data-filter="all">All</button>
     </div>
@@ -27,6 +28,7 @@
     </div>
   </div>
   <script src="main.js"></script>
+
 </body>
 
 
