--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -13,13 +13,13 @@
   <div class="container">
     <!-- Filters -->
     <div class="filters">
-      <h2>Filters</h2>
-      <button class="filter-btn" data-filter="transportation">Transportation</button>
-      <button class="filter-btn" data-filter="communication">Communication</button>
-      <button class="filter-btn" data-filter="sanitation">Sanitation</button>
-      <button class="filter-btn" data-filter="construction">Construction</button>
-      <button class="filter-btn" data-filter="consumption">Consumption</button>
-      <button class="filter-btn active" data-filter="all">All</button>
+      <h2>filters</h2>
+      <button class="filter-btn" data-filter="transportation">transportation</button>
+      <button class="filter-btn" data-filter="communication">communication</button>
+      <button class="filter-btn" data-filter="sanitation">sanitation</button>
+      <button class="filter-btn" data-filter="construction">construction</button>
+      <button class="filter-btn" data-filter="consumption">consumption</button>
+      <button class="filter-btn active" data-filter="all">all</button>
     </div>
     <!-- Results -->
     <div class="list">
