--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 <body>
     <div> 
     <h2>Burcu Yasemin Turkay</h2>
-    <img src="assets/me.jpg" alt=""></div>
+
+</div><div class="image-cropper">
+    <img src="assets/me.jpg" class="rounded"/>
+ </div>
     <p>My name is Burcu. I'm an M.Arch candidate at GSAPP. I'm also an exhibition designer, working at the intersection of art and architecture. Apparently, I'm a coder now!!!</p>
     <h3>Exercises</h3>
     <ul>
