--- a/exercise8/index.html
+++ b/exercise8/index.html
@@ -24,10 +24,10 @@
             </ul>
           </nav>
         <ul id="switcher">
-            <li id="grayButton"></li>
-            <li id="whiteButton"></li>
-            <li id="blueButton"></li>
-            <li id="yellowButton"></li>
+            <li id="grayButton"><i class="button"></i></li>
+            <li id="whiteButton"><i class="button"></i></li>
+            <li id="blueButton"><i class="button"></i></li>
+            <li id="yellowButton"><i class="button"></i></li>
           </ul>
           
           <h1>Color Scheme Switcher</h1>
